--- a/styles.css
+++ b/styles.css
@@ -2,10 +2,46 @@ body {
     color: #4a4a4a
 }
 
-section {
+/* section {
     padding: 32px 0px 32px 24px;    
+} */
+
+h1 {
+    font-size: 3.5vw;
 }
 
+h2 {
+    font-size: 2.8vw;
+}
+
+h3 {
+    font-size: 2.3vw;
+}
+
+h4 {
+    font-size: 1.6vw;
+}
+
+a, p {
+    font-size: 1.2vw;
+}
+
+/* Boostrap Component */
+.row {
+    margin: 0px
+}
+
+.col {
+    padding: 0px;
+}
+
+.card-body {
+    padding: 16px 16px 24px 16px;
+}
+
+.card-text {
+    font-size: 1.4vw;
+}
 
 /* Navigation Bar */
 nav {
