--- a/styles.css
+++ b/styles.css
@@ -1,13 +1,22 @@
+/* Universal Style */
 body {
     color: #4a4a4a
 }
 
-/* section {
-    padding: 32px 0px 32px 24px;    
-} */
 
+
+@media only screen and (max-width: 319px) { /* disable when the screen is too small */
+ main {
+     display: none;
+ }
+}
+
+
+/* fonts */
 h1 {
     font-size: 3.5vw;
+    position: relative;
+    overflow: hidden;
 }
 
 h2 {
@@ -19,11 +28,33 @@ h3 {
 }
 
 h4 {
-    font-size: 1.6vw;
+    font-size: 2vw;
 }
 
 a, p {
     font-size: 1.2vw;
+}
+
+@media only screen and (max-width: 767px) { /* font-size in mediumn screen */
+    h1 {
+        font-size: 9.5vw;
+    }
+
+    h2 {
+        font-size: 8vw;
+    }
+
+    h3 {
+        font-size: 6.65vw
+    }
+
+    h4 {
+        font-size: 6.5vw;
+    }
+
+    a,p {
+        font-size: 3.5vw;
+    }
 }
 
 /* Boostrap Component */
@@ -35,12 +66,27 @@ a, p {
     padding: 0px;
 }
 
+.card-header {
+    padding:16px 16px 24px 16px;
+}
+
 .card-body {
     padding: 16px 16px 24px 16px;
 }
 
 .card-text {
     font-size: 1.4vw;
+}
+
+.btn-link {
+    color: #6d6d6d;
+    font-size: 5vw;
+    font-weight: 600;
+    padding:0px;
+}
+.btn-link:hover {
+    color: white;
+    text-decoration: none;
 }
 
 /* Navigation Bar */
@@ -84,6 +130,137 @@ nav {
     display: none;
 }
 
+/* Custom Component */
+
+/* Section 1 */
+.banner {
+    overflow: hidden;
+    padding: 32px 12px 32px 24px !important;
+}
+
+.right-description button {
+    font-size: 1.6vw;
+    padding: 8px 0px 8px; color:white; 
+    background-color: #6d6d6d;
+    width: 27vw;
+}
+
+.right-description h4 {
+    line-height: 1.5; 
+    padding: 10px 0px
+}
+.courses {
+    background-color: #eaebec;
+}
+
+
+/* Section 2 */
+.information-right {
+    padding: 16px 0px 16px 0px;
+}
+
+/* Section 3 */
+.course-collapse-card {
+    background-color: #e4e4e4;
+}
+
+.right-row {
+    padding: 16px 16px 48px 16px;
+}
+
+/* Section 4 */
+.exhibit-video {
+    padding: 16px 12px!important;
+}
+
+.col-lg-60, .col-lg-40 {
+    position: relative;
+    width: 100%;
+    min-height: 1px;
+    padding: 0px
+}
+
+@media only screen and (min-width: 768px) {
+    .col-lg-60 {
+        -ms-flex: 0 0 60%;
+        flex: 0 0 60%;
+        max-width: 60%;
+        padding: 0px 15px;
+    }
+    
+    .col-lg-40 {
+        -ms-flex: 0 0 40%;
+        flex: 0 0 40%;
+        max-width: 40%;
+        padding: 0px 15px;
+    }
+
+    .right-row {
+        height:33%;
+        overflow: hidden;
+        padding: 16px 0px 16px 12px;
+    }
+    
+    .left-row {
+        height: 66%;
+        overflow: hidden;
+    }
+}
+
+.right-description {
+    padding-left: 12px;
+}
+
+@media only screen and (max-width: 767px) {
+    .banner { /* banner image div */
+        max-height: 300px;
+        padding: 0px!important;
+    }
+
+    .right-description {
+        padding: 32px 16px 32px 16px;
+    }
+
+    .right-description button {
+        background-color: #b6b6b6;
+        font-size: 4.6vw;
+        font-weight: 600;
+        width: 100%;
+    }
+
+    .right-description h4 {
+        padding: 32px 0px 24px;
+    }
+
+    .courses {
+        background-color: white;
+    }
+
+    .information-right {
+        padding: 0px;
+    }
+
+    .col-12 { /* Section 2 informtaion */
+        padding: 0px;
+    }
+
+    .information-detail {
+        padding: 16px 16px 0px 16px
+    }
+
+    .border-bottom {
+        border-bottom: 0px solid #dee2e6!important;
+    }
+
+    .exhibit-video {
+        padding: 16px 0px 24px !important;
+    }
+
+    footer {
+        padding-top: 0px !important;
+    }
+}
+
 @media only screen and (max-width: 768px) {
     .navbar-brand p { /* hide navbrand font on small screen */
         display: none;
@@ -97,52 +274,29 @@ nav {
     .navbar-nav { /* grow nav item width */
         width: 100%;
     }
-}
 
-@media only screen and (max-width: 768px) {
     a.nav-link { /* hide nav item text */
         display: none;
     }
-
+    
     .nav-icon { /* show nav item icon on small screen/ mobile device */
         display: block;
         height: 32px;
         margin: 0;
     }
-
+    
     li.or-companies { /* hide "or companies" option */
         display: none;
     }
 }
 
-
-@media only screen and (min-width: 992px) {
-    .col-lg-60 {
-        -ms-flex: 0 0 60%;
-        flex: 0 0 60%;
-        max-width: 60%;
-        padding: 0px 15px;
-    }
-}
-
-.col-lg-60 {
-    position: relative;
+/* GSAP Animation */
+h1 span {
+    position: absolute;
+    color: white;
+    background-color: #e4e4e4;;
+    height: 100%;
     width: 100%;
-    min-height: 1px;
-    padding: 0px
-}
-
-
-
-
-/* test */
-
-.right-row {
-    height:33%;
-    overflow: hidden;
-}
-
-.left-row {
-    height: 66%;
-    overflow: hidden;
-}
+    line-height: 1.5;
+    z-index: 1;
+   }
