--- a/styles.css
+++ b/styles.css
@@ -182,6 +182,7 @@ nav {
     color: white;
     background: #6d6d6d;
     width: 27vw;
+    max-width: 388.8px;
 }
 
 .right-description h4 {
@@ -191,6 +192,10 @@ nav {
 
 .courses {
     background: #eaebec;
+}
+
+.right-description button:hover {
+    opacity: 0.6 !important;
 }
 
 
@@ -368,13 +373,7 @@ h1 span {
     .card-text {
         font-size: 20.16px;
     }
+    .right-description button {
+        font-size: 28px;
+    }
 }
-
-/* ::-webkit-scrollbar {
-    width: 0;
-  }
-
-.wrapper {
-    max-height: 101vh;
-    animation: 0.5s ease-out 0s 1 fadeIn;
-  } */
